tests/react_imports/use_type_without_import.js
3 as React.Node; // ok
({}) as React.Node; // error
